Contacto-Extraterrstre-3d/src/main/java/antlr4/com/antlr4/com/ZetarianoParserParser.java
// Generated from /home/juanpa/Documentos/Contacto-Extraterrstre-3d/Contacto-Extraterrstre-3d/src/main/java/antlr4/com/ZetarianoParser.g4 by ANTLR 4.13.2
package antlr4.com.antlr4.com;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ZetarianoParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PUBLIC=1, CLASS=2, STRING=3, INT=4, BOOLEAN=5, DOUBLE=6, CHAR=7, VOID=8, 
		RETURN=9, NEW=10, IF=11, ELSE=12, TRUE=13, FALSE=14, SWITCH=15, CASE=16, 
		DEFAULT=17, BREAK=18, FOR=19, CONTINUE=20, WHILE=21, DO=22, PRINTLN=23, 
		PRINT=24, READLN=25, NULL_VAL=26, LPAREN=27, RPAREN=28, LLLAVE=29, RLLAVE=30, 
		PUNTO_COMA=31, COMA=32, INTERRG=33, DOS_PUNTOS=34, PUNTO=35, LCORCH=36, 
		RCORCH=37, IGUAL=38, NO_IGUAL=39, MAYOR_IGUAL=40, MENOR_IGUAL=41, MAYOR=42, 
		MENOR=43, AND=44, OR=45, NOT=46, INCREMENTO=47, DECREMENTO=48, SUMA_IGL=49, 
		RESTA_IGL=50, MULT_IGL=51, SUMA=52, RESTA=53, MULT=54, DIV=55, MOD=56, 
		ASIGNACION=57, ID=58, INTEGER=59, DOUBLES=60, STRINGS=61, CHARS=62, ESC=63, 
		LINE_COMMENT=64, BLOCK_COMMENT=65, WS=66;
	public static final int
		RULE_inicio = 0, RULE_bloc_main = 1, RULE_instrucciones = 2, RULE_instruccion = 3, 
		RULE_bloque_si = 4, RULE_bloque_switch = 5, RULE_declaracion = 6, RULE_asignacion = 7, 
		RULE_lvalue = 8, RULE_params = 9, RULE_param_var = 10, RULE_expresion = 11, 
		RULE_tipos = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "bloc_main", "instrucciones", "instruccion", "bloque_si", "bloque_switch", 
			"declaracion", "asignacion", "lvalue", "params", "param_var", "expresion", 
			"tipos"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'public'", "'class'", "'String'", "'int'", "'boolean'", "'double'", 
			"'char'", "'void'", "'return'", "'new'", "'if'", "'else'", "'true'", 
			"'false'", "'switch'", "'case'", "'default'", "'break'", "'for'", "'continue'", 
			"'while'", "'do'", "'println'", "'print'", "'readln'", "'null'", "'('", 
			"')'", "'{'", "'}'", "';'", "','", "'?'", "':'", "'.'", "'['", "']'", 
			"'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'&&'", "'||'", "'!'", 
			"'++'", "'--'", "'+='", "'-='", "'*='", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PUBLIC", "CLASS", "STRING", "INT", "BOOLEAN", "DOUBLE", "CHAR", 
			"VOID", "RETURN", "NEW", "IF", "ELSE", "TRUE", "FALSE", "SWITCH", "CASE", 
			"DEFAULT", "BREAK", "FOR", "CONTINUE", "WHILE", "DO", "PRINTLN", "PRINT", 
			"READLN", "NULL_VAL", "LPAREN", "RPAREN", "LLLAVE", "RLLAVE", "PUNTO_COMA", 
			"COMA", "INTERRG", "DOS_PUNTOS", "PUNTO", "LCORCH", "RCORCH", "IGUAL", 
			"NO_IGUAL", "MAYOR_IGUAL", "MENOR_IGUAL", "MAYOR", "MENOR", "AND", "OR", 
			"NOT", "INCREMENTO", "DECREMENTO", "SUMA_IGL", "RESTA_IGL", "MULT_IGL", 
			"SUMA", "RESTA", "MULT", "DIV", "MOD", "ASIGNACION", "ID", "INTEGER", 
			"DOUBLES", "STRINGS", "CHARS", "ESC", "LINE_COMMENT", "BLOCK_COMMENT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ZetarianoParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ZetarianoParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public Bloc_mainContext bloc_main() {
			return getRuleContext(Bloc_mainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ZetarianoParserParser.EOF, 0); }
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoParserListener ) ((ZetarianoParserListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoParserListener ) ((ZetarianoParserListener)listener).exitInicio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoParserVisitor ) return ((ZetarianoParserVisitor<? extends T>)visitor).visitInicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			bloc_main();
			setState(27);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloc_mainContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(ZetarianoParserParser.PUBLIC, 0); }
		public TerminalNode CLASS() { return getToken(ZetarianoParserParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(ZetarianoParserParser.ID, 0); }
		public TerminalNode LLLAVE() { return getToken(ZetarianoParserParser.LLLAVE, 0); }
		public TerminalNode RLLAVE() { return getToken(ZetarianoParserParser.RLLAVE, 0); }
		public List<InstruccionesContext> instrucciones() {
			return getRuleContexts(InstruccionesContext.class);
		}
		public InstruccionesContext instrucciones(int i) {
			return getRuleContext(InstruccionesContext.class,i);
		}
		public Bloc_mainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloc_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoParserListener ) ((ZetarianoParserListener)listener).enterBloc_main(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoParserListener ) ((ZetarianoParserListener)listener).exitBloc_main(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoParserVisitor ) return ((ZetarianoParserVisitor<? extends T>)visitor).visitBloc_main(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloc_mainContext bloc_main() throws RecognitionException {
		Bloc_mainContext _localctx = new Bloc_mainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloc_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			match(PUBLIC);
			setState(30);
			match(CLASS);
			setState(31);
			match(ID);
			setState(32);
			match(LLLAVE);
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376151711994L) != 0)) {
				{
				{
				setState(33);
				instrucciones();
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(39);
			match(RLLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionesContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(ZetarianoParserParser.PUBLIC, 0); }
		public List<TerminalNode> ID() { return getTokens(ZetarianoParserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ZetarianoParserParser.ID, i);
		}
		public TerminalNode LPAREN() { return getToken(ZetarianoParserParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ZetarianoParserParser.RPAREN, 0); }
		public TerminalNode LLLAVE() { return getToken(ZetarianoParserParser.LLLAVE, 0); }
		public TerminalNode RLLAVE() { return getToken(ZetarianoParserParser.RLLAVE, 0); }
		public Param_varContext param_var() {
			return getRuleContext(Param_varContext.class,0);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public TerminalNode VOID() { return getToken(ZetarianoParserParser.VOID, 0); }
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoParserListener ) ((ZetarianoParserListener)listener).enterInstrucciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoParserListener ) ((ZetarianoParserListener)listener).exitInstrucciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoParserVisitor ) return ((ZetarianoParserVisitor<? extends T>)visitor).visitInstrucciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instrucciones);
		int _la;
		try {
			int _alt;
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				match(PUBLIC);
				setState(42);
				match(ID);
				setState(43);
				match(LPAREN);
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376151711992L) != 0)) {
					{
					setState(44);
					param_var();
					}
				}

				setState(47);
				match(RPAREN);
				setState(48);
				match(LLLAVE);
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8944219228970216184L) != 0)) {
					{
					{
					setState(49);
					instruccion();
					}
					}
					setState(54);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(55);
				match(RLLAVE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				match(PUBLIC);
				setState(57);
				match(VOID);
				setState(58);
				match(ID);
				setState(59);
				match(LPAREN);
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376151711992L) != 0)) {
					{
					setState(60);
					param_var();
					}
				}

				setState(63);
				match(RPAREN);
				setState(64);
				match(LLLAVE);
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8944219228970216184L) != 0)) {
					{
					{
					setState(65);
					instruccion();
					}
					}
					setState(70);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(71);
				match(RLLAVE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				match(PUBLIC);
				setState(75);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case STRING:
				case INT:
				case BOOLEAN:
				case DOUBLE:
				case CHAR:
					{
					setState(73);
					tipos();
					}
					break;
				case ID:
					{
					setState(74);
					match(ID);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(77);
				match(ID);
				setState(78);
				match(LPAREN);
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376151711992L) != 0)) {
					{
					setState(79);
					param_var();
					}
				}

				setState(82);
				match(RPAREN);
				setState(83);
				match(LLLAVE);
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8944219228970216184L) != 0)) {
					{
					{
					setState(84);
					instruccion();
					}
					}
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(90);
				match(RLLAVE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(92); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(91);
						declaracion();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(94); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public TerminalNode IF() { return getToken(ZetarianoParserParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(ZetarianoParserParser.LPAREN, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(ZetarianoParserParser.RPAREN, 0); }
		public TerminalNode LLLAVE() { return getToken(ZetarianoParserParser.LLLAVE, 0); }
		public TerminalNode RLLAVE() { return getToken(ZetarianoParserParser.RLLAVE, 0); }
		public Bloque_siContext bloque_si() {
			return getRuleContext(Bloque_siContext.class,0);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(ZetarianoParserParser.ELSE, 0); }
		public TerminalNode SWITCH() { return getToken(ZetarianoParserParser.SWITCH, 0); }
		public List<TerminalNode> ID() { return getTokens(ZetarianoParserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ZetarianoParserParser.ID, i);
		}
		public TerminalNode DEFAULT() { return getToken(ZetarianoParserParser.DEFAULT, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(ZetarianoParserParser.DOS_PUNTOS, 0); }
		public TerminalNode BREAK() { return getToken(ZetarianoParserParser.BREAK, 0); }
		public List<TerminalNode> PUNTO_COMA() { return getTokens(ZetarianoParserParser.PUNTO_COMA); }
		public TerminalNode PUNTO_COMA(int i) {
			return getToken(ZetarianoParserParser.PUNTO_COMA, i);
		}
		public List<Bloque_switchContext> bloque_switch() {
			return getRuleContexts(Bloque_switchContext.class);
		}
		public Bloque_switchContext bloque_switch(int i) {
			return getRuleContext(Bloque_switchContext.class,i);
		}
		public TerminalNode FOR() { return getToken(ZetarianoParserParser.FOR, 0); }
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public TerminalNode ASIGNACION() { return getToken(ZetarianoParserParser.ASIGNACION, 0); }
		public TerminalNode INCREMENTO() { return getToken(ZetarianoParserParser.INCREMENTO, 0); }
		public TerminalNode DECREMENTO() { return getToken(ZetarianoParserParser.DECREMENTO, 0); }
		public TerminalNode WHILE() { return getToken(ZetarianoParserParser.WHILE, 0); }
		public TerminalNode DO() { return getToken(ZetarianoParserParser.DO, 0); }
		public TerminalNode PRINTLN() { return getToken(ZetarianoParserParser.PRINTLN, 0); }
		public TerminalNode PRINT() { return getToken(ZetarianoParserParser.PRINT, 0); }
		public TerminalNode READLN() { return getToken(ZetarianoParserParser.READLN, 0); }
		public TerminalNode CONTINUE() { return getToken(ZetarianoParserParser.CONTINUE, 0); }
		public TerminalNode RETURN() { return getToken(ZetarianoParserParser.RETURN, 0); }
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoParserListener ) ((ZetarianoParserListener)listener).enterInstruccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoParserListener ) ((ZetarianoParserListener)listener).exitInstruccion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoParserVisitor ) return ((ZetarianoParserVisitor<? extends T>)visitor).visitInstruccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruccion);
		int _la;
		try {
			int _alt;
			setState(229);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				declaracion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				asignacion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				match(IF);
				setState(101);
				match(LPAREN);
				setState(102);
				expresion(0);
				setState(103);
				match(RPAREN);
				setState(104);
				match(LLLAVE);
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8944219228970216184L) != 0)) {
					{
					{
					setState(105);
					instruccion();
					}
					}
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(111);
				match(RLLAVE);
				setState(112);
				bloque_si();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(114);
				match(IF);
				setState(115);
				match(LPAREN);
				setState(116);
				expresion(0);
				setState(117);
				match(RPAREN);
				setState(118);
				instruccion();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(120);
				match(IF);
				setState(121);
				match(LPAREN);
				setState(122);
				expresion(0);
				setState(123);
				match(RPAREN);
				setState(124);
				instruccion();
				setState(125);
				match(ELSE);
				setState(126);
				instruccion();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(128);
				match(SWITCH);
				setState(129);
				match(LPAREN);
				setState(130);
				match(ID);
				setState(131);
				match(RPAREN);
				setState(133); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(132);
					bloque_switch();
					}
					}
					setState(135); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==CASE );
				setState(137);
				match(DEFAULT);
				setState(138);
				match(DOS_PUNTOS);
				setState(142);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(139);
						instruccion();
						}
						} 
					}
					setState(144);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				setState(145);
				match(BREAK);
				setState(146);
				match(PUNTO_COMA);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(148);
				match(FOR);
				setState(149);
				match(LPAREN);
				setState(162);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case STRING:
				case INT:
				case BOOLEAN:
				case DOUBLE:
				case CHAR:
					{
					{
					setState(150);
					tipos();
					setState(151);
					match(ID);
					setState(152);
					match(ASIGNACION);
					setState(153);
					expresion(0);
					setState(154);
					match(PUNTO_COMA);
					setState(155);
					expresion(0);
					setState(156);
					match(PUNTO_COMA);
					setState(157);
					match(ID);
					setState(158);
					_la = _input.LA(1);
					if ( !(_la==INCREMENTO || _la==DECREMENTO) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				case PUNTO_COMA:
					{
					{
					setState(160);
					match(PUNTO_COMA);
					setState(161);
					match(PUNTO_COMA);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(164);
				match(RPAREN);
				setState(165);
				match(LLLAVE);
				setState(167); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(166);
					instruccion();
					}
					}
					setState(169); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8944219228970216184L) != 0) );
				setState(171);
				match(RLLAVE);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(173);
				match(WHILE);
				setState(174);
				match(LPAREN);
				setState(175);
				expresion(0);
				setState(176);
				match(RPAREN);
				setState(177);
				match(LLLAVE);
				setState(179); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(178);
					instruccion();
					}
					}
					setState(181); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8944219228970216184L) != 0) );
				setState(183);
				match(RLLAVE);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(185);
				match(DO);
				setState(186);
				match(LLLAVE);
				setState(188); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(187);
					instruccion();
					}
					}
					setState(190); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8944219228970216184L) != 0) );
				setState(192);
				match(RLLAVE);
				setState(193);
				match(WHILE);
				setState(194);
				match(LPAREN);
				setState(195);
				expresion(0);
				setState(196);
				match(RPAREN);
				setState(197);
				match(PUNTO_COMA);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(199);
				match(PRINTLN);
				setState(200);
				match(LPAREN);
				setState(202);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8944219228903333888L) != 0)) {
					{
					setState(201);
					expresion(0);
					}
				}
